# Arc-Engine

./: .gitignore  .pubignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  README.es.md  README.md  ROADMAP.md  pubspec.yaml
android/: build.gradle  settings.gradle.kt
android/src/main/cpp/: CMakeLists.txt  aaudio_utils.cpp  aaudio_utils.h  audio_engine.cpp  common.h  compressor.cpp  compressor.h  dispatcher.cpp  dispatcher.h  dsp_processor.cpp  dsp_processor.h  effect.h  engine_state.cpp  engine_state.h  engine_threads.cpp  engine_threads.h  flac_handler.cpp  flac_handler.h  limiter.cpp  limiter.h  media_handler.cpp  media_handler.h  reverb.cpp  reverb.h  ring_buffer.cpp  ring_buffer.h  wav_handler.cpp  wav_handler.h
example/: pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle.kts
example/lib/: main.dart
example/lib/widgets/: app.dart  audio_controls.dart  eq_dialog.dart  home_screen.dart  library_status_card.dart  pcm_visualizer.dart  status_display.dart  waveform_widget.dart
example/test/: widget_test.dart
example/test/integration/: engine_test.dart
lib/: arc_engine.dart  audio_engine.dart
lib/src/: audio_focus.dart  audio_mixer.dart  ffi_bindings.dart  pcm_stream.dart  track_player.dart
test/: audio_engine_test.dart  fake_ffi.dart  pcm_stream_test.dart  track_player_test.dart
test/cpp/: build_and_run.sh  common.h  dsp_processor_benchmark  dsp_processor_benchmark.cpp  dsp_processor_test  dsp_processor_test.cpp  ring_buffer_benchmark  ring_buffer_benchmark.cpp  ring_buffer_test  ring_buffer_test.cpp
(+3 files in other folders)
